[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/wizard_editor/wizard_editor_nodes/wizard_editor_node_answer.gd" type="Script" id=1]
[ext_resource path="res://components/shared/int_spinbox_big.tscn" type="PackedScene" id=2]

[node name="StepAnswer" type="GraphNode"]
margin_right = 263.0
margin_bottom = 160.0
mouse_filter = 1
title = "Answer !"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 0.803922, 0.631373, 0.109804, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.537255, 0.819608, 0.945098, 1 )
script = ExtResource( 1 )

[node name="Grid" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 34.0
margin_right = 256.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="StepLabel" type="Label" parent="Grid"]
margin_top = 10.0
margin_right = 64.0
margin_bottom = 30.0
text = "text:"

[node name="TextEdit" type="TextEdit" parent="Grid"]
margin_left = 68.0
margin_right = 248.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = "FontDefault"
wrap_enabled = true

[node name="OrderLabel" type="Label" parent="Grid" groups=["min"]]
margin_top = 44.0
margin_right = 64.0
margin_bottom = 78.0
custom_constants/line_spacing = -6
text = "priority
(order):"

[node name="OrderSpinnerBig" parent="Grid" groups=["min"] instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_top = 44.0
margin_right = 248.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100000000
use_min_value = false

[node name="VarsLabel" type="Label" parent="Grid" groups=["min"]]
margin_top = 82.0
margin_right = 64.0
margin_bottom = 116.0
custom_constants/line_spacing = -6
text = "variable
check:"

[node name="VariableCheckEdit" type="LineEdit" parent="Grid" groups=["min"]]
margin_left = 68.0
margin_top = 82.0
margin_right = 248.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="DocsLabel" type="Label" parent="Grid" groups=["min"]]
margin_top = 126.0
margin_right = 64.0
margin_bottom = 146.0
text = "docs url:"

[node name="DocsEdit" type="LineEdit" parent="Grid" groups=["min"]]
margin_left = 68.0
margin_top = 120.0
margin_right = 248.0
margin_bottom = 152.0
size_flags_horizontal = 3

[connection signal="value_changed" from="Grid/OrderSpinnerBig" to="." method="_on_OrderSpinnerBig_value_changed"]
